{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 1462,
  "lineage": "1925b700-2f66-0cd5-71f9-b7ae09686276",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0112ea4e4ca32d8ee",
            "arn": "arn:aws:ec2:eu-central-1:253490779310:elastic-ip/eipalloc-0112ea4e4ca32d8ee",
            "association_id": "eipassoc-04215e3641f7d6a77",
            "domain": "vpc",
            "id": "eipalloc-0112ea4e4ca32d8ee",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-059c021f1643f3e47",
            "private_dns": "ip-10-0-0-51.eu-central-1.compute.internal",
            "private_ip": "10.0.0.51",
            "public_dns": "ec2-3-76-164-204.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.76.164.204",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "NAT-Gateway-EIP",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "NAT-Gateway-EIP",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09191d47657c9691a",
            "arn": "arn:aws:ec2:eu-central-1:253490779310:instance/i-049986401a5db9649",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049986401a5db9649",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1e5ef62c62b3767",
            "private_dns": "ip-10-0-0-36.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.36",
            "public_ip": "3.75.235.145",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03c74dd55b8f06f03",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e2e0c39b30b050b",
            "tags": {
              "Environment": "dev",
              "Name": "Bastion-dev",
              "OS": "Linux",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Bastion-dev",
              "OS": "Linux",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bacfdaa1741bf100"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490779310:internet-gateway/igw-053507bf62863d8d0",
            "id": "igw-053507bf62863d8d0",
            "owner_id": "253490779310",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "myIGW",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myIGW",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ccbe129d388769f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:loadbalancer/app/web-app-alb-dev/64cec6e070f3d359",
            "arn_suffix": "app/web-app-alb-dev/64cec6e070f3d359",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-app-alb-dev-1688018893.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:loadbalancer/app/web-app-alb-dev/64cec6e070f3d359",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-app-alb-dev",
            "preserve_host_header": false,
            "region": "eu-central-1",
            "security_groups": [
              "sg-04d205e966c7fcf58"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01e2e0c39b30b050b"
              },
              {
                "subnet_id": "subnet-0824222d61dc66c9a"
              }
            ],
            "subnets": [
              "subnet-01e2e0c39b30b050b",
              "subnet-0824222d61dc66c9a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "WebApp-ALB-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "WebApp-ALB-dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ccbe129d388769f7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:loadbalancer/app/web-app-alb-dev/64cec6e070f3d359"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.publicSubnet",
            "aws_subnet.publicSubnet2",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:listener/app/web-app-alb-dev/64cec6e070f3d359/0991ba4a3185b3e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:targetgroup/web-app-tg-dev/93dbe974af94fc11",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:listener/app/web-app-alb-dev/64cec6e070f3d359/0991ba4a3185b3e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:loadbalancer/app/web-app-alb-dev/64cec6e070f3d359",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.web_app_alb",
            "aws_lb_target_group.web_app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.publicSubnet",
            "aws_subnet.publicSubnet2",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "web_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:targetgroup/web-app-tg-dev/93dbe974af94fc11",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:listener-rule/app/web-app-alb-dev/64cec6e070f3d359/0991ba4a3185b3e6/6ec84286d5c95bc3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:listener-rule/app/web-app-alb-dev/64cec6e070f3d359/0991ba4a3185b3e6/6ec84286d5c95bc3",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:listener/app/web-app-alb-dev/64cec6e070f3d359/0991ba4a3185b3e6",
            "priority": 100,
            "region": "eu-central-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.web_app_alb",
            "aws_lb_listener.http",
            "aws_lb_target_group.web_app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.publicSubnet",
            "aws_subnet.publicSubnet2",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:targetgroup/web-app-tg-dev/93dbe974af94fc11",
            "arn_suffix": "targetgroup/web-app-tg-dev/93dbe974af94fc11",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:253490779310:targetgroup/web-app-tg-dev/93dbe974af94fc11",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:253490779310:loadbalancer/app/web-app-alb-dev/64cec6e070f3d359"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-app-tg-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "web-app-tg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-app-tg-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ccbe129d388769f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myNATGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0112ea4e4ca32d8ee",
            "association_id": "eipassoc-04215e3641f7d6a77",
            "connectivity_type": "public",
            "id": "nat-067e94a0136d0dd83",
            "network_interface_id": "eni-059c021f1643f3e47",
            "private_ip": "10.0.0.51",
            "public_ip": "3.76.164.204",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01e2e0c39b30b050b",
            "tags": {
              "Environment": "dev",
              "Name": "myNATGateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myNATGateway",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.elasticIP",
            "aws_internet_gateway.myIGW",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myPrivateRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490779310:route-table/rtb-0c71af7cf54a4625d",
            "id": "rtb-0c71af7cf54a4625d",
            "owner_id": "253490779310",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-067e94a0136d0dd83",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "myPrivateRouteTable",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myPrivateRouteTable",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccbe129d388769f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.elasticIP",
            "aws_internet_gateway.myIGW",
            "aws_nat_gateway.myNATGateway",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myPublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490779310:route-table/rtb-03c6511fd00e363e4",
            "id": "rtb-03c6511fd00e363e4",
            "owner_id": "253490779310",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053507bf62863d8d0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "myPublicRouteTable",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myPublicRouteTable",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccbe129d388769f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f3ad38cd17f744",
            "region": "eu-central-1",
            "route_table_id": "rtb-0c71af7cf54a4625d",
            "subnet_id": "subnet-084778ec056825dfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.elasticIP",
            "aws_internet_gateway.myIGW",
            "aws_nat_gateway.myNATGateway",
            "aws_route_table.myPrivateRouteTable",
            "aws_subnet.privateSubnet",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bf53b2de1207324",
            "region": "eu-central-1",
            "route_table_id": "rtb-0c71af7cf54a4625d",
            "subnet_id": "subnet-0ae5e653f9b2304f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.elasticIP",
            "aws_internet_gateway.myIGW",
            "aws_nat_gateway.myNATGateway",
            "aws_route_table.myPrivateRouteTable",
            "aws_subnet.privateSubnet2",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e332a1210622ae45",
            "region": "eu-central-1",
            "route_table_id": "rtb-03c6511fd00e363e4",
            "subnet_id": "subnet-01e2e0c39b30b050b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.myPublicRouteTable",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f8bb0c7d5c32c61",
            "region": "eu-central-1",
            "route_table_id": "rtb-03c6511fd00e363e4",
            "subnet_id": "subnet-0824222d61dc66c9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.myPublicRouteTable",
            "aws_subnet.publicSubnet2",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490779310:security-group/sg-04d205e966c7fcf58",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d205e966c7fcf58",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB-SecurityGroup",
            "name_prefix": "",
            "owner_id": "253490779310",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ALB-SecurityGroup",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ALB-SecurityGroup",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccbe129d388769f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490779310:security-group/sg-0bacfdaa1741bf100",
            "description": "Security group for Bastion host - Restrict SSH access to specified IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bacfdaa1741bf100",
            "ingress": [
              {
                "cidr_blocks": [
                  "95.222.26.151/32"
                ],
                "description": "SSH access from specified IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BastionSecurityGroup",
            "name_prefix": "",
            "owner_id": "253490779310",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "BastionSecurityGroup",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "BastionSecurityGroup",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccbe129d388769f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490779310:security-group/sg-05003643108899214",
            "description": "Security group for Web App server in private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05003643108899214",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d205e966c7fcf58"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bacfdaa1741bf100"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WebApp-SecurityGroup",
            "name_prefix": "",
            "owner_id": "253490779310",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "WebApp-SecurityGroup",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "WebApp-SecurityGroup",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccbe129d388769f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490779310:subnet/subnet-084778ec056825dfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084778ec056825dfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490779310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "privateSubnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "privateSubnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ccbe129d388769f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490779310:subnet/subnet-0ae5e653f9b2304f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae5e653f9b2304f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490779310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "privateSubnet2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "privateSubnet2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ccbe129d388769f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490779310:subnet/subnet-01e2e0c39b30b050b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e2e0c39b30b050b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490779310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "publicSubnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "publicSubnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ccbe129d388769f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490779310:subnet/subnet-0824222d61dc66c9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0824222d61dc66c9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490779310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "publicSubnet2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "publicSubnet2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ccbe129d388769f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490779310:vpc/vpc-0ccbe129d388769f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-05638e1ae0e4dfb35",
            "default_route_table_id": "rtb-0190316b5250d6fec",
            "default_security_group_id": "sg-0046ce719e27b0768",
            "dhcp_options_id": "dopt-04a2a549330ec6141",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ccbe129d388769f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0190316b5250d6fec",
            "owner_id": "253490779310",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "myVPC",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myVPC",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}